syntax = "proto2";

option java_package = "io.polycat.catalog.store.protos";
option java_outer_classname = "GroupUserProto";
option java_multiple_files = true;

import "record_metadata_options.proto";

message GroupUser {
  //there is only one value, fixed 0 to indicate the primary key
  required string group_id = 1;
  required string user_id = 2;

}

message GroupUserUnion {
  option (com.apple.foundationdb.record.record).usage = UNION;
  required GroupUser group_user = 1;
}